--- a/frontend/contact_page.html
+++ b/frontend/contact_page.html
@@ -178,6 +178,27 @@
       box-shadow: 0 4px 12px rgba(216, 27, 96, 0.3);
     }
 
+    .form-status {
+      margin-top: 1rem;
+      padding: 0.9rem 1rem;
+      border-radius: 10px;
+      font-weight: 600;
+      text-align: center;
+      display: none;
+    }
+
+    .form-status.success {
+      background: rgba(56, 142, 60, 0.12);
+      color: #2e7d32;
+      border: 1px solid rgba(46, 125, 50, 0.4);
+    }
+
+    .form-status.error {
+      background: rgba(216, 27, 96, 0.12);
+      color: #c62828;
+      border: 1px solid rgba(198, 40, 40, 0.4);
+    }
+
     /* Contact Info */
     .contact-info {
       display: flex;
@@ -360,7 +381,7 @@
       <!-- Contact Form -->
       <div class="contact-form">
         <h2>Send Us a Message</h2>
-        <form id="contactForm" onsubmit="handleSubmit(event)">
+        <form id="contactForm" onsubmit="handleSubmit(event)" method="POST" action="../backend/contact_submit.php" novalidate>
           <div class="form-group">
             <label for="name">Full Name *</label>
             <input type="text" id="name" name="name" required placeholder="Enter your full name">
@@ -395,6 +416,7 @@
 
           <button type="submit" class="btn-submit">Send Message</button>
         </form>
+        <div id="formStatus" class="form-status" role="status" aria-live="polite"></div>
       </div>
 
       <!-- Contact Information -->
@@ -478,16 +500,6 @@
       </div>
     </div>
 
-    <!-- Map Section -->
-    <div class="map-section">
-      <h2>Find Us on Map</h2>
-      <div class="map-placeholder">
-        📍 Interactive Map - 123 Medical Center Drive, Healthcare District
-        <br>
-        <small>(Map integration can be added here using Google Maps API)</small>
-      </div>
-    </div>
-  </div>
 
   <!-- Footer -->
   <footer>
@@ -519,24 +531,50 @@
   </footer>
 
   <script>
-    function handleSubmit(event) {
-      event.preventDefault();
-      
-      // Get form data
-      const formData = {
-        name: document.getElementById('name').value,
-        email: document.getElementById('email').value,
-        phone: document.getElementById('phone').value,
-        subject: document.getElementById('subject').value,
-        message: document.getElementById('message').value
-      };
+    const form = document.getElementById('contactForm');
+    const statusBox = document.getElementById('formStatus');
 
-      // Here you would typically send the data to a server
-      // For now, we'll just show an alert
-      alert('Thank you for contacting us! We will get back to you soon.\n\nYour message has been received.');
-      
-      // Reset form
-      document.getElementById('contactForm').reset();
+    async function handleSubmit(event) {
+      event.preventDefault();
+      statusBox.style.display = 'none';
+      statusBox.textContent = '';
+      statusBox.className = 'form-status';
+
+      const formData = new FormData(form);
+
+      try {
+        const response = await fetch(form.action, {
+          method: 'POST',
+          body: formData
+        });
+
+        const responseText = await response.text();
+        let data = {};
+
+        if (responseText) {
+          try {
+            data = JSON.parse(responseText);
+          } catch (parseError) {
+            throw new Error(
+              `Server returned an unexpected response (status ${response.status}). ` +
+              `Check the PHP error log.\n${responseText.substring(0, 200)}`
+            );
+          }
+        }
+
+        if (!response.ok || !data.success) {
+          throw new Error(data.error || 'Something went wrong. Please try again.');
+        }
+
+        statusBox.textContent = data.message || 'Your message has been sent successfully!';
+        statusBox.classList.add('success');
+        statusBox.style.display = 'block';
+        form.reset();
+      } catch (error) {
+        statusBox.textContent = error.message;
+        statusBox.classList.add('error');
+        statusBox.style.display = 'block';
+      }
     }
   </script>
   <script src="navbar.js"></script>
